--- a/src/app/core/component/calendar/calendar.component.scss
+++ b/src/app/core/component/calendar/calendar.component.scss
@@ -136,6 +136,7 @@
   position: relative;
   cursor: pointer;
   transition: background-color 0.2s ease;
+  min-width: 30px;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.03);
@@ -170,7 +171,6 @@
   border-radius: 50%;
   font-weight: 500;
   font-size: 14px;
-  transition: background-color 0.1s ease;
 }
 
 /* Desktop adjustments */
@@ -200,7 +200,7 @@
   }
 
   .calendar-day {
-    padding: 2px;
+    padding: 8px;
   }
 
   .day-number {
