--- a/src/app/core/component/calendar/calendar.component.scss
+++ b/src/app/core/component/calendar/calendar.component.scss
@@ -78,13 +78,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 18px;
-    width: auto;
-    padding: 0 12px;
-
-    .btn-text {
-      margin-left: 4px;
-      font-size: 14px;
+    border-radius: 15%;
+    width: 50px;
+    height: 32px;
+    padding: 8px;
+    font-size: 15px;
+    i {
+      font-size: 12px;
     }
   }
 }
@@ -110,6 +110,7 @@
 .calendar-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  grid-auto-flow: row;
   background-color: #fff;
   width: 33.333%; /* Each grid takes 1/3 of the carousel width */
   flex-shrink: 0;
@@ -119,6 +120,21 @@
   }
 }
 
+/* Weekday Headers Container */
+.weekday-headers-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  grid-column: 1 / -1;
+  padding: 0 8px;
+  background-color: #f8f9fa;
+}
+
+.weekday-headers {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+}
 
 .weekday-header {
   text-align: center;
@@ -126,6 +142,7 @@
   font-size: 12px;
   font-weight: 500;
   color: #666;
+  flex: 1;
 }
 
 .calendar-day {
@@ -218,4 +235,17 @@
       padding: 8px;
     }
   }
+  .view-toggle {
+    .toggle-btn {
+      padding-top: 12px;
+      height: 43px;
+      font-size: 20px;
+    }
+  }
+}
+
+.container{
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
